--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -51,7 +51,7 @@
             </ul>    
         </div>
         <div id ="image_container">
-            <img src = "{% static 'images/money1.jpeg'}%" alt="money">
+            <img src = "{% static 'images/money1.jpeg'%}" alt="money">
 
         </div>
     </div>
