--- a/static/css/style.css
+++ b/static/css/style.css
@@ -552,6 +552,9 @@ body {
         font-size: 2vw;
        
     }
+    
+    
+    
 }
 
 @media screen and (max-width: 750px) {
@@ -563,19 +566,11 @@ body {
     body{
        
     }
-    #about_container {
-        width:100%;
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-
-    }
+    
     .expense_div {
         width:30%;
        
-        
-        
-        
+    
 
     }
     .placeholder_expense {
@@ -586,12 +581,10 @@ body {
     }
         
     #text_box {
-        text-align: center;
-        padding: 5%;
-        width:70%;
+       
     }
     #image_container{
-        text-align:center;
+        
     }
     #main {  
         
@@ -600,6 +593,88 @@ body {
     #menu a {
        
         font-size:2.5vw;
+    }
+    #about_container {
+        
+        width:100%;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        background-color: red;
+    
+        
+        font-family: 'Courier New', Courier, monospace;
+        font-style: normal;
+       
+    }
+    #text_box {
+        background-color: lightcoral;
+        text-align: center;
+        padding: 5%;
+        width:70%;
+
+    }
+    #text_box h1 {
+        color:green;
+        font-size:4vw;
+    }
+    #text_box p {
+        
+        margin-top: 5%;
+        font-size: 1.6vw;
+
+    }
+    #text_box h2 {
+        margin-top: 5%;
+        margin-bottom: 5%;
+        font-size:1.5vw;
+
+    }
+    #start {
+    
+        list-style: none;
+        display: inline;
+    
+        
+    }
+    #start li {
+    
+        display: inline;
+    }
+
+    .start_buttons {
+        display: inline-block;
+        font-size: 1vw;
+        padding: 7.5px 15px;
+        height:fit-content;
+        
+        text-decoration: none;
+        text-align: center;
+        width:20%;
+        border: solid 1px black;
+        background-color: #0077cc;
+        color: #fff;
+        border-radius: 5px;
+        box-shadow: 0px 2px 5px rgba(0,0,0,0.25);
+        transition: all 0.3s ease-in-out;
+    }
+    .start_buttons:hover {
+        box-shadow: 0 3px 10px purple;
+        
+    }
+
+    #image_container {
+        padding: 5%;
+        width:45%
+
+    }
+    #image_container img {
+        text-align:center;
+    
+        width:80%;
+        border: 2px solid black;
+        border-radius: 60px; 
+        box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3); 
     }
         
 }
