--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,7 @@
 body {
     font-family:cursive;
     background-color: #ccc;
+    
 
 }
 .container {
@@ -53,6 +54,7 @@ body {
     height:fit-content;
     max-height: 175px;
     background-color: lightcyan;
+    overflow:hidden;
   
     border: solid 2px black;
     border-radius: 25px;
@@ -106,11 +108,7 @@ body {
     box-shadow: 0 3px 10px purple;
     
 }
-.placeholder_container {
 
-  
-
-}
 
 .placeholder_expense {
     justify-content: space-evenly;
@@ -321,21 +319,23 @@ body {
 
 }
 #text_box h1 {
+    margin-top: 0px;
     font-size: 2.5vw;
 }
 #text_box p {
     
-    margin-top: 5%;
+    margin-top: 1.5%;
     font-size: 1.6vw;
 
 }
 #text_box h2 {
-    margin-top: 5%;
-    margin-bottom: 5%;
+    margin-top: 2.5%;
+    margin-bottom: 2%;
     font-size:1.5vw;
 
 }
 #start {
+   
    
     list-style: none;
     display: inline;
@@ -511,12 +511,45 @@ body {
 
 @media screen and (max-width: 1350px) {
     body {
+
+    }
+
+    #image_container {
+        padding: 5%;
+        width:100%
+    
+    }
+    #image_container img {
        
-        
+        width:100%;
       
     }
+    #text_box {
+        width: 100%;
+    }
+    #text_box h1 {
+        font-size:25px
+    }
+    #text_box p {
+        
+      
+        font-size: 19px;
+
+    }
+    #text_box h2 {
+    
+        font-size:23px;
+    }
+
+
+    .start_buttons {
+        display: inline-block;
+        font-size: 18px;
+        
+    }
+        
     .placeholder_expense {
-        height: 150px;
+        height: 200px;
         min-height:fit-content;
         width:25%;
     }
@@ -526,6 +559,18 @@ body {
         width:25%;
        
     }
+    .expense_div h2 {
+        font-size: 19px;
+    }
+    .expense_div h3 {
+        font-size: 18px;
+    }
+    .expense_div p {
+        font-size: 15px
+    }
+    .expense_buttons {
+        font-size: 15px;
+    }
     #home { 
        
     }
@@ -533,7 +578,7 @@ body {
         text-align: center;
         letter-spacing: 3px;
         text-align: center;
-        font-size: 2.5vw;
+        font-size: 3.5vw;
     }
     #menu  {
         text-align: center;
@@ -542,8 +587,45 @@ body {
         padding-bottom: 2.5px;
     }
     #menu a {
-        font-size: 2vw;
+        font-size: 2.1vw;
        
+    }
+    .title_h1 {
+        font-size:25px;
+    }
+    .btn_add {
+        font-size: 20px;
+    }
+    
+
+    .social_media i {
+        
+        font-size: 28px;
+        margin: 1%;
+        color: black;
+    }
+    
+    .total h2 {
+        font-size:17px;
+    }
+    .total h3 {
+        font-size:17px;
+    
+    }
+    
+    .budget h2 {
+        font-size: 17px;
+    }
+    .budget h3 {
+        font-size:17px;
+    }
+
+    .leftover h2 {
+        font-size: 17px;
+    
+    }
+    .leftover h3 {
+        font-size: 17px;
     }
     
     
@@ -564,6 +646,11 @@ body {
     .expense_div {
         width:30%;
 
+    }
+
+
+    .expense_buttons {
+        font-size: 18px;
     }
     .placeholder_expense {
         height: 75px;
@@ -630,23 +717,9 @@ body {
     .start_buttons {
         display: inline-block;
         font-size: 14px;
-        padding: 7.5px 15px;
-        height:fit-content;
-        
-        text-decoration: none;
-        text-align: center;
-        width:20%;
-        border: solid 1px black;
-        background-color: #0077cc;
-        color: #fff;
-        border-radius: 5px;
-        box-shadow: 0px 2px 5px rgba(0,0,0,0.25);
-        transition: all 0.3s ease-in-out;
-    }
-    .start_buttons:hover {
-        box-shadow: 0 3px 10px purple;
         
     }
+    
 
     #image_container {
         padding: 5%;
@@ -750,7 +823,7 @@ body {
    
     
     .placeholder_expense {
-        height: 75px;
+        height: 100px;
         min-height:fit-content;
        
         width:30%;
@@ -767,35 +840,17 @@ body {
        
     }
     .expense_div h2 {
-    
-        
-        margin-top: 5%;
-        border-bottom: black solid 2px;
         font-size: 17px;
-    
     }
     .expense_div h3 {
-        margin-top: 5%;
         font-size: 16px;
-
     }
     .expense_div p {
-        font-style: italic;
-        margin-top: 5%;
         font-size: 13px
-
     }
 
     .expense_buttons {
         font-size: 14px;
-       
-    
-        color: #fff;
-        border-radius: 5px;
-        box-shadow: 0px 2px 5px rgba(0,0,0,0.25);
-        transition: all 0.3s ease-in-out;
-        margin-bottom: 5%;
-
     }
 
         
