remove commented out code

--- a/templates/budget_page.html
+++ b/templates/budget_page.html
@@ -30,7 +30,7 @@
     </header>
 
     <div class="form_container">  
-        <h2>Set your max budget</h2>
+        <h2>Set your max budget (Limit: $100,000) </h2>
         <form  class= "all_forms" method= "POST" action = "">
                 {% csrf_token %}
                 {{form.as_p}}
