--- a/templates/add_expenses.html
+++ b/templates/add_expenses.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add expense</title>
+    <meta name="description" content="Expense Tracker Website">
+    <meta name="keywords" content="expenses, tracking, budget, money">
+    <title>Add Expense</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
