--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Expense Tracker Website">
+    <meta name="keywords" content="expenses, tracking, budget, money">
     <title>Expenses</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
