add page title in base.html

--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -19,7 +19,7 @@
     {% block body %}
     <header id = "home">
 
-      <h1 id = "main">Expense Tracker</h1>
+      <h1 id = "main">SpendWise</h1>
       <nav>
         <ul id ="menu">
             <li><a href="/">Home</a></li>
